Especificaciones-ENG.html

--- a/Especificaciones-ENG.html
+++ b/Especificaciones-ENG.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>productos</title>
+    <title>EcoBreeze</title>
+    <link rel="website icon" type="png" href="img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
         rel="stylesheet"
@@ -340,5 +341,6 @@ zoomableImage.addEventListener('mouseleave', function() {
 <script>
   AOS.init();
 </script>
+<script src="//code.tidio.co/joxeeelvbudhcikm7r2xevvyjcwyansx.js" async></script>
 </body>
 </html>
